<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activities.MovieActivity">

    <item
        android:id="@+id/action_sort_popular"
        android:orderInCategory="100"
        android:title="@string/movie_sort_popular"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_top_rated"
        android:orderInCategory="101"
        android:title="@string/movie_sort_top_rated"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sort_favorite"
        android:orderInCategory="101"
        android:title="@string/menu_fav"
        app:showAsAction="never" />

</menu>