<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_thumbnail"
            android:layout_width="@dimen/img_width"
            android:layout_height="@dimen/no_space"
            android:layout_marginStart="@dimen/padding_mid"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_marginTop="@dimen/padding_mid"
            android:layout_marginBottom="@dimen/no_space"
            android:adjustViewBounds="true"
            android:contentDescription="@string/content_description_movie_poster"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_vote_average"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/movies" />

        <TextView
            android:id="@+id/tv_movie_title"
            style="@style/ShadowTheme"
            android:layout_marginStart="@dimen/layout_margin_mid"
            android:layout_marginLeft="@dimen/layout_margin_mid"
            android:layout_marginEnd="@dimen/layout_margin_mid"
            android:layout_marginRight="@dimen/layout_margin_mid"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintLeft_toRightOf="@+id/img_thumbnail"
            app:layout_constraintRight_toLeftOf="@+id/fab"
            app:layout_constraintTop_toTopOf="@+id/img_thumbnail"
            tools:text="Movie Title" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/padding_mid"
            android:layout_marginRight="@dimen/padding_mid"
            android:clickable="true"
            app:backgroundTint="@color/likeBackground"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_title"
            app:srcCompat="@drawable/ic_like_pre" />

        <LinearLayout
            android:layout_width="@dimen/no_space"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_mid"
            android:layout_marginRight="@dimen/layout_margin_mid"
            app:layout_constraintBottom_toBottomOf="@+id/tv_movie_vote_average"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_overview"
            app:layout_constraintRight_toLeftOf="@+id/tv_movie_vote_average"
            app:layout_constraintTop_toTopOf="@+id/tv_movie_vote_average">

            <RatingBar
                android:id="@+id/rb_movie_vote_average"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:numStars="@integer/vote_total"
                android:stepSize="0.1"
                android:theme="@style/GoldenRatingBar"
                android:visibility="visible" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_movie_vote_average"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/detail_vote"
            android:layout_marginEnd="@dimen/layout_margin_mid"
            android:layout_marginRight="@dimen/no_space"
            android:padding="@dimen/layout_margin_mid"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintRight_toRightOf="@+id/tv_movie_overview"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_overview" />

        <TextView
            android:id="@+id/tv_trailer"
            style="@style/ShadowTheme"
            android:layout_marginTop="@dimen/padding_mid"
            android:layout_marginEnd="@dimen/padding_mid"
            android:layout_marginRight="@dimen/padding_mid"
            android:text="@string/trailer"
            app:layout_constraintLeft_toLeftOf="@+id/img_thumbnail"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_thumbnail" />

        <TextView
            android:id="@+id/tv_reviews"
            style="@style/ShadowTheme"
            android:layout_marginLeft="@dimen/no_space"
            android:layout_marginTop="@dimen/reviewTV"
            android:layout_marginRight="@dimen/no_space"
            android:text="@string/review"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@+id/tv_trailer"
            app:layout_constraintRight_toRightOf="@+id/tv_trailer"
            app:layout_constraintTop_toBottomOf="@+id/ll_trailers"
            tools:text="Reviews" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin_mid"
            android:textColor="@color/releaseDateColor"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title"
            app:layout_constraintRight_toRightOf="@+id/fab"
            app:layout_constraintTop_toBottomOf="@+id/tv_movie_title"
            tools:text="ReleaseDate" />

        <TextView
            android:id="@+id/tv_movie_overview"
            android:layout_width="@dimen/no_space"
            android:layout_height="wrap_content"
            android:padding="@dimen/layout_margin_mid"
            android:textColor="@android:color/black"
            app:layout_constraintLeft_toLeftOf="@+id/tv_movie_title"
            app:layout_constraintRight_toRightOf="@+id/fab"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date"
            tools:text="Movie Overview" />

        <LinearLayout
            android:id="@+id/ll_reviews"
            android:layout_width="@dimen/no_space"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_marginTop="@dimen/no_space"
            android:layout_marginRight="@dimen/padding_mid"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_reviews">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_review_unavailable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_margin_mid"
                android:layout_marginBottom="@dimen/layout_margin_mid"
                android:text="@string/review_unavailable"
                android:textStyle="italic"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_trailers"
            android:layout_width="@dimen/no_space"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_marginTop="@dimen/no_space"
            android:layout_marginRight="@dimen/padding_mid"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_trailer">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailers"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:scrollbars="horizontal" />

            <TextView
                android:id="@+id/tv_trailer_unavailable"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/layout_margin_mid"
                android:layout_marginBottom="@dimen/layout_margin_mid"
                android:text="@string/trailer_unavailable"
                android:textStyle="italic"
                android:visibility="gone" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>